# upstageailab-langchain-pjt-langchain_5

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
PRPs/: prp_webui.md
code/: baseline.ipynb  baseline.py  baseline_directoryloader.py  cli.py  env_template  evaluate.py  main.py  vector_store.py
code/baseline/: baseline.ipynb  baseline.py  baseline_directoryloader.py  baseline_memory.py  baseline_save_vector_store.py  baseline_with_source.py  baselinetest.py  log_util.py  vector_store.py
code/modules/: __init__.py  chat_history.py  crawler.py  llm.py  logger.py  rag_system.py  retriever.py  sql.py  vector_store.py
code/tests/: __init__.py  conftest.py  test_logger.py  test_retriever.py  test_sql.py  test_vector_store_delete.py
code/utils/: check_gpu.py
